Closed
Bug 213035
Opened 22 years ago
Closed 22 years ago
replace NS_ConvertUTF8toUCS2 with IsUTF8 for UTF8-ness checking
Categories
(MailNews Core :: MIME, defect)
MailNews Core
MIME
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: jshin1987, Assigned: sspitzer)
Details
Attachments
(1 file, 1 obsolete file)
4.60 KB,
patch
|
Bienvenu
:
review+
bzbarsky
:
superreview+
asa
:
approval1.5b+
|
Details | Diff | Splinter Review |
This is just to make debugging a bit easy. Currently, NS_ConvertUTF8toUCS2 is
invoked just to check if a string is a valid UTF-8 string. Now that we have
IsUTF8, we'd better use it. With that, we get assertions where invalid strings
are used (in mailnews/mime/src) instead of string/public/nsUTF8Utils.h
Reporter | ||
Comment 1•22 years ago
|
||
![]() |
||
Comment 2•22 years ago
|
||
How about changing:
#ifdef DEBUG
if (foo)
NS_ASSERTION(something, "")
#endif
To:
NS_ASSERTION(!foo || something, "");
Reporter | ||
Comment 3•22 years ago
|
||
Yup, I realized that right after uploading attachment 127994 [details] [diff] [review].
Attachment #127994 -
Attachment is obsolete: true
Reporter | ||
Comment 4•22 years ago
|
||
Comment on attachment 127996 [details] [diff] [review]
simplified patch
asking for r/sr
Attachment #127996 -
Flags: superreview?(bzbarsky)
Attachment #127996 -
Flags: review?(sspitzer)
![]() |
||
Comment 5•22 years ago
|
||
Comment on attachment 127996 [details] [diff] [review]
simplified patch
Excellent. sr=me.
Attachment #127996 -
Flags: superreview?(bzbarsky) → superreview+
Reporter | ||
Updated•22 years ago
|
Attachment #127996 -
Flags: review?(sspitzer) → review?(bienvenu)
![]() |
||
Comment 6•22 years ago
|
||
Comment on attachment 127996 [details] [diff] [review]
simplified patch
yes, thx.
Attachment #127996 -
Flags: review?(bienvenu) → review+
Reporter | ||
Comment 7•22 years ago
|
||
Comment on attachment 127996 [details] [diff] [review]
simplified patch
thanks for r.
Now asking for 1.5b.
Risk : zero in opt. build because I'm just changing several NS_ASSERTION.
Benefit : in debug build, assertion will be made where it's supposed to be made
instead of a far-away place(xpcom/string).
Attachment #127996 -
Flags: approval1.5b?
Comment 8•22 years ago
|
||
Comment on attachment 127996 [details] [diff] [review]
simplified patch
a=asa (on behalf of drivers) for checkin to 1.5beta
Attachment #127996 -
Flags: approval1.5b? → approval1.5b+
Comment 9•22 years ago
|
||
It looks like this landed on 8/26. Can this bug be resolved?
Reporter | ||
Comment 10•22 years ago
|
||
sorry for forgetting to mark as resolved.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verified fixed using LXR as code inspection.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•