bug 213035 : replace NS_ConvertUTF8toUCS2 with IsUTF8 for UTF8-ness checking (r=bienvenu, sr=bz, a1.5=asa)